# LookTheDungeon

./: .gitignore  .gitmodules  CMakeLists.txt  CREDITS.md  CompileShaders.py  Deploy.py  DeployWindows.py  DeployWindows.py.txt  EditorUI.ini  GenerateAssetsPreviewsWithBlender.py  HexPaletteToNormalizedRGBA.py  LookTheDungeonEditor.ini  README.md  RenderAssetsThumbnailsWithBlender.py  imgui.ini  resource.rc.in
Assets/UI/Editor/: Editor.rcss  Editor.rml  example.tga
Levels/: level2.lvl  view_cone_test.lvl
Shaders/: PhongLighting.frag
Sources/: CMakeConfig.h.in  EditorMain.cpp  Main.cpp
Sources/Editor/: Editor.cpp  Editor.h  EditorUI.cpp  EditorUI.h  FreeMoveCamera.cpp  FreeMoveCamera.h  IsometricCamera.cpp  Project.cpp  Project.h
Sources/Game/: FreeMoveCamera.cpp  Game.cpp  Game.h  IsometricCamera.cpp  IsometricCamera.h
